@@ -189,14 +189,11 @@ public class OXUser extends OXCommonImpl implements OXUserInterface {
                  log.error("Requested context " + ctx.getId() + " does not exist!", invalidCredentialsException);
                  throw invalidCredentialsException;
             }
+                        
+            setIdOrGetIDFromNameAndIdObject(ctx, usrdata);                      
             
-            // ############## DO SOME CHECKS ONLY IF "USERNAME_CHANGEABLE" FEATURE IS ACTIVATED ##########
-            // the ID of the user MUST be set if USERNAME_CHANGEABLE=true, 
-            // else we cannot identify the correct user
-            if(usernameIsChangeable() && usrdata.getId() == null){
-                throw new InvalidDataException("Cannot resolve user!User id not sent but changing username is enabled!");
-            }
-            // do username checks if feature is active
+            // ############## DO SOME CHECKS ONLY IF "USERNAME_CHANGEABLE" FEATURE IS ACTIVATED ##########            
+            String current_name = tool.getUsernameByUserID(ctx, usrdata.getId()); // check for current name             
             if(usernameIsChangeable() && usrdata.getId() !=null && usrdata.getName()!=null){
                 // check new username 
                 if (prop.getUserProp(AdminProperties.User.CHECK_NOT_ALLOWED_CHARS, true)) {
@@ -206,25 +203,21 @@ public class OXUser extends OXCommonImpl implements OXUserInterface {
                 if (prop.getUserProp(AdminProperties.User.AUTO_LOWERCASE, true)) {
                     usrdata.setName(usrdata.getName().toLowerCase());
                 }
-                
-                String current_name = tool.getUsernameByUserID(ctx, usrdata.getId()); // check for current name                 
+                    
                 if(!current_name.equals(usrdata.getName())){
                     if (tool.existsUserName(ctx, usrdata.getName())) {
                         throw new InvalidDataException("User " + usrdata.getName() + " already exists in this context");
                     }
                 }
                 
-            }
-            // ########################## END OF FEATURE CHECKS ########################
-            
-            // ### IF USERNAME_CHANGEABLE=false BUT the client sents the username , show an error as of bug #9663 #####
-            if(!usernameIsChangeable() && usrdata.getName()!=null){
+            }            
+            // ### IF USERNAME_CHANGEABLE=false BUT the client sents the username which is not the same as the current , show an error as of bug #9663 #####
+            if(!usernameIsChangeable() && usrdata.getName()!=null && !usrdata.getName().equals(current_name)){
                 throw new InvalidDataException("Changing username is disabled!");
             }
-            //#########################################################################
+            //########################## END OF FEATURE CHECKS ########################
             
             
-            setIdOrGetIDFromNameAndIdObject(ctx, usrdata);
 
             usrdata.testMandatoryCreateFieldsNull();
             userid = usrdata.getId();
