@@ -1,3 +1,7 @@
+* 2007-10-29 - manuel.kraft@open-xchange.com
+ 
+  - Bugfix ID#9983 Changing user by name isn't running any more
+
 * 2007-10-23 - dennis.sieben@open-xchange.com
 
   - Bugfix ID#9620 RMI Api documentation lacks proper language handling description
